--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
     <div *ngFor="let photo of data" class="relative group " >
         <div class="absolute justify-between px-4 place-items-center  w-full  flex   duration-300  bottom-4 z-10 md:opacity-0 md:group-hover:opacity-100">
             <h1 class="text-white text-[10px] md:text-auto font-black flex place-content-center place-items-center">
-                <img class="w-3 h-3 md:w-8 md:h-8 rounded mr-2" [src]="'https://ui-avatars.com/api/?background='+photo.avg_color.substr(1)+'&color=fff&name='+photo.photographer" [alt]="photo.photographer">{{photo.photographer}}
+                <img class="hidden md:block -3 h-3 md:w-8 md:h-8 rounded mr-2" [src]="'https://ui-avatars.com/api/?background='+photo.avg_color.substr(1)+'&color=fff&name='+photo.photographer" [alt]="photo.photographer">{{photo.photographer}}
             </h1>
             <a class="rounded bg-white p-2 " [href]="photo.src.original+'?cs=srgb&amp;dl=elkhiari-'+photo.id+'.jpg&amp;fm=jpg'" download="">
                 <svg class="w-3 h-3 md:w-6 md:h-6  text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 18">
