--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,5 @@
-<div  class="flex sticky md:mt-10 top-0 md:top-5 duration-300 text-gray-900 z-50 container max-w-3xl  mx-auto  justify-between place-items-center p-6 md:rounded-xl  bg-gray-200/40 backdrop-blur-md">
-    <div class="font-black">
-        IMG<span class="bg-yellow-400/60 rounded p-1">HUB</span>
-    </div>
+<div  class="flex sticky bg-white/50 md:mt-10 top-0 md:top-5 duration-300 text-gray-900 z-50 container max-w-3xl  mx-auto  justify-between place-items-center p-6 md:rounded-xl  backdrop-blur-md">
+    <app-logo></app-logo>
     <ul class="flex place-content-center place-items-center space-x-10 font-bold">
         <li >
             <a class="p-2  duration-300 relative after:w-0 hover:after:w-full after:duration-300 after:absolute after:h-1 after:left-0 after:bg-gray-600 after:rounded-full after:bottom-0 " routerLink="">Home</a>
