add source page

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,8 +5,8 @@
     <div class="flex w-full justify-between place-items-center">
         <app-logo></app-logo>
         <ul class="flex space-x-8 font-bold">
-            <li><a routerLink="/">Home</a></li>
-            <li><a routerLink="/">contact</a></li>
+            <li><a routerLink="">Home</a></li>
+            <li><a routerLink="source">Source</a></li>
         </ul>
     </div>
 </div>
