--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!loading" class="flex flex-col space-y-4  w-full px-10 py-6 place-content-center mx-auto bg-slate-200/60 rounded ">
+<div *ngIf="!loading" class="flex sticky top-full flex-col space-y-4  w-full px-10 py-6 place-content-center mx-auto bg-slate-200/60 rounded ">
     <h1>
         © 2023 Imghub™ All Rights Reserved, Images sourced from Pixeld API.
     </h1>
