--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,9 @@
     padding: 0;
     box-sizing: border-box;
     outline: none;
+    font-family: 'Nunito', sans-serif;
 }
 
 body {
-    font-family: 'Nunito', sans-serif;
+    min-height: 100vh;
 }
