All is Working now

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,6 +7,7 @@
         <ul class="flex space-x-8 font-bold">
             <li><a routerLink="">Home</a></li>
             <li><a routerLink="source">Source</a></li>
+            <li><a routerLink="about">about</a></li>
         </ul>
     </div>
 </div>
