--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -14,20 +14,20 @@
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
             </svg>
         </div>
-        <div (click)="search('football')" class="bg-slate-200/50 border hover:border-black flex place-content-center place-items-center p-4 rounded cursor-pointer hover:bg-slate-200 duration-300">
-            Football
+        <div (click)="search('earthquake')" class="bg-slate-200/50 border hover:border-black flex place-content-center place-items-center p-4 rounded cursor-pointer hover:bg-slate-200 duration-300">
+            Earthquake
             <svg class="w-4 ml-2 h-4 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
             </svg>
         </div>
-        <div (click)="search('nature')" class="bg-slate-200/50 border hover:border-black flex place-content-center place-items-center p-4 rounded cursor-pointer hover:bg-slate-200 duration-300">
-            Natue
+        <div (click)="search('jungle')" class="bg-slate-200/50 border hover:border-black flex place-content-center place-items-center p-4 rounded cursor-pointer hover:bg-slate-200 duration-300">
+            Jungle
             <svg class="w-4 ml-2 h-4 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
             </svg>
         </div>
-        <div (click)="search('Morocco')" class="bg-slate-200/50 border hover:border-black flex place-content-center place-items-center p-4 rounded cursor-pointer hover:bg-slate-200 duration-300">
-            Morocco
+        <div (click)="search('workout')" class="bg-slate-200/50 border hover:border-black flex place-content-center place-items-center p-4 rounded cursor-pointer hover:bg-slate-200 duration-300">
+            workout
             <svg class="w-4 ml-2 h-4 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
             </svg>
