--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,3 +1,3 @@
 <div class="font-black">
-    <span class="mr-1">IMG</span><span class="bg-yellow-400 rounded p-1">HUB</span>
+    <span class="mr-1">IMG</span><span class="bg-black text-white rounded p-1">HUB</span>
 </div>
